// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot (dois temas): claro 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#C7186B",
        "borderColor": undefined,
        "borderRadius": 12,
        "borderWidth": 0,
        "justifyContent": "center",
        "minHeight": 44,
        "opacity": 1,
        "paddingHorizontal": 20,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "color": "#FFFFFF",
          },
          {
            "opacity": 1,
          },
          null,
        ]
      }
    >
      Confirmar
    </Text>
  </View>
</View>
`;

exports[`Button snapshot (dois temas): escuro 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FF4FA0",
        "borderColor": undefined,
        "borderRadius": 12,
        "borderWidth": 0,
        "justifyContent": "center",
        "minHeight": 44,
        "opacity": 1,
        "paddingHorizontal": 20,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "color": "#0E0E10",
          },
          {
            "opacity": 1,
          },
          null,
        ]
      }
    >
      Confirmar
    </Text>
  </View>
</View>
`;
